config/elasticsearch/es-client-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: elasticsearch
    component: elasticsearch
    role: client
  name: elasticsearch-client
  namespace: logging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
        component: elasticsearch
        role: client
    spec:
      tolerations:
      - key: "dedicated"
        operator: "Exists"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "amd64"
              - key: logging 
                operator: In
                values:
                - "true"
#      initContainers:
#      - name: "chmod"
#        image: "ibmcom/icp-initcontainer:1.0.0"
#        imagePullPolicy: "IfNotPresent"
#        command: ["chmod", "777", "/data-dir"]
#        securityContext:
#          privileged: true
#        volumeMounts:
#        - name: elasticsearch-data
#          mountPath: /data-dir
#      - name: "sysctl"
#        image: "ibmcom/icp-initcontainer:1.0.0"
#        imagePullPolicy: "IfNotPresent"
#        command: ["sysctl", "-w", "vm.max_map_count=262144"]
#        securityContext:
#          privileged: true
      containers:
      - name: indices-cleaner
#        image: "ibmcom/indices-cleaner:0.2"
#        image: "elasticsearch_zcp"
        image: "docker.elastic.co/elasticsearch/elasticsearch:6.2.4"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: actionfile
          mountPath: /action.yml
          subPath: action.yml
        - name: localtime
          mountPath: "/etc/localtime"
          readOnly: true
        - name: config
          mountPath: /etc/curator.yml
          subPath: curator.yml
        - name: cron
          mountPath: /etc/cron.d/curator-cron
          subPath: curator-cron
      - name: es-client
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
#        image: "ibmcom/elasticsearch:5.5.1"
#        image: "elasticsearch_zcp"
        image: "docker.elastic.co/elasticsearch/elasticsearch:6.2.4"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "1024M"
        ports:
        - containerPort: 9200
          name: rest
          protocol: TCP
        - containerPort: 9300
          name: internal
          protocol: TCP
        volumeMounts:
        - name: "elasticsearch-data"
          mountPath: "/usr/share/elasticsearch/data"
        - name: "elasticsearch-conf"
          mountPath: "/usr/share/elasticsearch/config/elasticsearch.yml"
          subPath: elasticsearch.yml
      volumes:
      - name: "elasticsearch-data"
        emptyDir: {}
      - name: "elasticsearch-conf"
        configMap:
          name: es-configmap
          items:
            - key: client.yml
              path: elasticsearch.yml
      - name: "actionfile"
        configMap:
          name: es-curator
          items:
            - key: action.yml
              path: action.yml
      - name: "localtime"
        hostPath:
          path: /etc/localtime
      - name: "config"
        configMap:
          name: es-curator
          items:
            - key: config.yml
              path: curator.yml
      - name: "cron"
        configMap:
          name: es-curator
          items:
            - key: cron
              path: curator-cron
