config/elasticsearch/es-data-statefulset.yaml
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    app: elasticsearch
    component: elasticsearch
    role: data
  name: elasticsearch-data
  namespace: kube-system
spec:
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  serviceName: elasticsearch-data
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
        component: elasticsearch
        role: data
    spec:
      tolerations:
      - key: "dedicated"
        operator: "Exists"
        effect: "NoSchedule"
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "amd64"
              - key: management
                operator: In
                values:
                - "true"
      securityContext:
        fsGroup: 1000
#      initContainers:
#      - name: "chmod"
#        image: "ibmcom/icp-initcontainer:1.0.0"
#        imagePullPolicy: "IfNotPresent"
#        command: ["chmod", "777", "/data-dir"]
#        securityContext:
#          privileged: true
#        volumeMounts:
#        - name: elasticsearch-data
#          mountPath: /data-dir
#      - name: "sysctl"
#        image: "ibmcom/icp-initcontainer:1.0.0"
#        imagePullPolicy: "IfNotPresent"
#        command: ["sysctl", "-w", "vm.max_map_count=262144"]
#        securityContext:
#          privileged: true
      containers:
      - name: es-data
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
#        image: "ibmcom/elasticsearch:5.5.1"
        image: "elasticsearch_zcp"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "1024M"
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: "elasticsearch-data"
          mountPath: "/usr/share/elasticsearch/data"
        - name: "elasticsearch-conf"
          mountPath: "/usr/share/elasticsearch/config/elasticsearch.yml"
          subPath: elasticsearch.yml
      volumes:
        - name: "elasticsearch-conf"
          configMap:
            name: es-configmap
            items:
              - key: data.yml
                path: elasticsearch.yml
  volumeClaimTemplates:
  - metadata:
      name: elasticsearch-data
      labels:
        app: elasticsearch
        component: elasticsearch
        namespace: kube-system
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: "20Gi"
      storageClassName: "logging-storage"
