config/elasticsearch/es-master-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: elasticsearch
    component: elasticsearch
    role: master
  name: elasticsearch-master
  namespace: logging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
        component: elasticsearch
        role: master
    spec:
      tolerations:
      - key: "dedicated"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "value"
        operator: "Exists"
        effect: "NoSchedule"
      restartPolicy: Always
#      nodeSelector:
#        logging: "true"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "amd64"
              - key: logging 
                operator: In
                values:
                - "true"
      containers:
      - name: es-master
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
#        image: "ibmcom/elasticsearch:5.5.1"
#        image: "elasticsearch_zcp"
        image: "docker.elastic.co/elasticsearch/elasticsearch:6.2.4"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "2048M"
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: "elasticsearch-data"
          mountPath: "/usr/share/elasticsearch/data"
        - name: "elasticsearch-conf"
          mountPath: "/usr/share/elasticsearch/config/elasticsearch.yml"
          subPath: elasticsearch.yml
      volumes:
        - name: "elasticsearch-data"
          emptyDir: {}
        - name: "elasticsearch-conf"
          configMap:
            name: es-configmap
            items:
              - key: master.yml
                path: elasticsearch.yml
