config/elasticsearch/es-discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticsearch
    component: elasticsearch
  name: elasticsearch-discovery
  namespace: logging
spec:
  selector:
    app: elasticsearch
    component: elasticsearch
    role: master
  ports:
  - name: transport
    port: 9300
    targetPort: 9300
    protocol: TCP
