config/elasticsearch/es-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elastic
  namespace: logging
#  annotations:
#    kubernetes.io/ingress.class: "ibm-icp-management"
#    icp.management.ibm.com/authz-type: "rbac"
#    icp.management.ibm.com/location-modifier: "~"
#    icp.management.ibm.com/configuration-snippet: |
#      if ($request_uri ~* "/_([0-9A-Za-z]*)\?_timestamp=[0-9]*(.*)") {
#                proxy_pass http://$proxy_upstream_name/_$1?$2;
#            }
spec:
  rules:
  - http:
      paths:
      - path: /_cat
        backend:
          serviceName: elasticsearch
          servicePort: 9200
      - path: /elasticsearch*
        backend:
          serviceName: elasticsearch
          servicePort: 9200
      - path: /logstash*
        backend:
          serviceName: elasticsearch
          servicePort: 9200
      - path: /filebeat*
        backend:
          serviceName: elasticsearch
          servicePort: 9200
      - path: /heapster*
        backend:
          serviceName: elasticsearch
          servicePort: 9200
